assets/css/post.scss
// lisensi
@import '_addon/lisensi.scss';

h1, h2, h3 {
    text-transform: capitalize;
    position: relative;
    font-weight: bolder;
    margin-top: 1rem;
    color: var(--bg-dark);
    width: fit-content;
}

h1 { font-size: 2rem; margin-bottom: .9rem; line-height: 2.3rem;}
h2 { font-size: 1.5rem; margin-bottom: .8rem;}
h3 { font-size: 1.2rem; margin-bottom: .7rem; line-height: 1.5rem;}

:is(h1,h2,h3):before {
    content: '# ';
}

:is(h1,h2,h3):after {
    position: absolute;
    content: '';
    bottom: -3px;
    left: 0;
    width: 100%;
    height: 3px;
    background-color: var(--oren-cerah);
}

h1:after { bottom: -3px; }
h3:after { bottom: -2px; }

a {
    position: relative;
    text-decoration: none;
    text-wrap: nowrap;
    color: var(--color-hover);
}

a:before {
    content: '';
    position: absolute;
    bottom: -1.8px;
    height: 2px;
    width: 0;
    background-color: var(--color-hover);
    transition: width 100ms;
}

a:hover:before {
    width: 100%;
}

.content-post { // container post layout
    margin: -1rem;
    padding-inline: .4rem;
    font-size: 1.1rem;
    line-height: 1.8rem;
    color: var(--color-text);
    box-sizing: border-box;
}

h1.judul-post {
    width: 100%;
    text-transform: capitalize;
    text-align: center;
    margin-bottom: 1rem;
    line-height: 2.3rem;
    text-wrap: balance;
}

h1.judul-post:before {
    content: '';
}

h1.judul-post:after {
    position: static;
    content: '';
    bottom: 0;
    left: 0;
    width: 0;
    height: 0;
}

.tanggal {
    text-align: center;
}

.penulis {
    text-transform: capitalize;
}

.tag-center {
    display: flex;
    justify-content: center;
    gap: .4rem;
}

.tag-post {
    font-size: .8rem;
    display: inline-block;
    margin-block: 1rem;
    padding: .4rem .6rem;
    // margin: auto;
    color: var(--oren-cerah);
    background-color: var(--oren-cerahhh);
    line-height: normal;
    text-transform: uppercase;
    box-sizing: border-box;
}

blockquote {
    position: relative;
    padding: .8rem 1rem .8rem .8rem;
    margin-block: .5rem;
    background-color: var(--bg-blockquote);
    border-left: 5px solid var(--color-box-border);
    box-sizing: border-box;
    font-style: italic;
}

blockquote p {
    margin-left: 2rem;
}

blockquote::before {
    position: absolute;
    top: 1.5rem;
    left: .5rem;
    content: '\201C';
    font-size: 3rem;
    color: var(--color-box-border);
}

blockquote ul,
blockquote ol {
    padding-left: 1rem;
}

strong {
    font-weight: bold;
}

em {
    font-style: italic;
}

ol, ul {
    margin-left: 2rem;
}

ol {
    list-style-type: decimal;
}

ul {
    list-style-type: disc;
}

// Lightbox
a.lightbox-image:before,
a.lightbox-image:hover:before {
    display: none;
}

p img {
    border-radius: .4rem;
    max-width: 100%; // agar tidak tembus parent
    margin-top: .5rem;
}

p.p-gambar {
    width: fit-content;
    position: relative;
    margin-bottom: 1.8rem;
}

p.p-gambar a:before { // disable animasi link didalam lightbox
    content: '';
    position: static;
    bottom: 0;
    height: 0;
    width: 0;
}

p.p-gambar a:hover:before { // disable animasi link didalam lightbox
    width: 0;
}

p.p-gambar.tengah { // membuat gambar yg lebih kecil dari parent berada di tengah dengan class .p-gambar
    margin-inline: auto;
}

p.p-gambar::after { //menambahkan label gambar di tag p yang mempunyai class .p-gambar
    width: fit-content;
    height: fit-content;
    margin: auto;
    position: absolute;
    bottom: -1.6rem;
    left: 0;
    right: 0;
    font-style: italic;
    font-size: 1rem;
    color: var(--label-gambar);
    content: attr(label);
}

p a.tengah.lightbox-image { // gambar rata tengah tanpa class .p-gambar
    display: block;
    width: fit-content;
    height: fit-content;
    margin-inline: auto;
}
// END Lightbox

// Codeblock
:is(li, p) code.language-plaintext { // codeblock inline
    font-family: 'Fira Code', monospace;
    font-size: 1rem;
    color: var(--bg-dark);
    background-color: var(--oren-cerahhh);
    padding-inline: .3rem;
    border-radius: 5px;
}
// tag figure tanda untuk menampilkan codeblock dengan nama file atau directory
figure.highlight { //pembungkus codeblock
    position: relative;
    margin-block: .4rem;
    font-family: 'Fira Code', monospace;
    font-size: 1rem;
    border-radius: .4rem;
    overflow-x: auto;
    background-color: var(--color-headline);
}

figure.highlight pre {
    height: fit-content;
    padding: .5rem 1rem .5rem 1rem;
    margin-top: 3.1rem;
    overflow-x: auto;
    background-color: var(--color-box-dark);
}

figure.highlight pre table {
    margin: -0.5rem 0 -0.5rem -1rem;
}

figure.highlight pre pre{
    margin: 0;
}

figure td pre.lineno { // nomor baris sebelah kiri didalam tag pre
    user-select: none;
    color: var(--color-linenum);
    background-color: var(--color-box-dark);
    padding: 0;
    box-sizing: border-box;
}

figure td.code pre { // tempat code didalam pre
    padding: 0;
}

figure td.code { // tempat code didalam pre
    background-color: var(--color-box-dark);
    padding-left: 0;
}

figure td.gutter.gl { // tempat code didalam pre
    background-color: var(--color-box-dark);
}

figure.highlight::before { // tulisan "file" sebelun nama file atau dir
    position: absolute;
    top: .6rem;
    left: .6rem;
    height: fit-content;
    content: ('File');
    font-weight: bolder;
    padding: 0 .45rem;
    color: var(--bg-dark);
    background-color: var(--bg-blockquote);
    border-radius: 6px;

}

figure.highlight::after { // menampilkan nama file atau dir setelah tulisan "file"
    position: absolute;
    top: .6rem;
    left: 4.4rem;
    content: attr(file);
    color: var(--bg-light);
    font-weight: bold;
}

div.highlighter-rouge {
    font-weight: normal;
    font-family: 'Fira Code', monospace;
    font-size: 1rem;
    margin-block: .4rem;
    overflow-x: auto;
    border-radius: .4rem;
    box-sizing: border-box;
    background-color: var(--bg-dark);
}

div.highlighter-rouge div.highlight {
    padding: 1rem 1rem;
}
// END Codeblock

// Table
table {
    display: table;
    margin-block: .5rem;
}

table thead {
    display: table-header-group;
    color: var(--bg-light);
    background-color: var(--oren-gelap);
    letter-spacing: 1.2px;
    vertical-align: middle;
    padding-inline: 1rem;
    box-sizing: border-box;

}

table tbody {
    display: table-row-group;

}

table td {
    display: table-cell;
    vertical-align: middle;
    padding-inline: 1rem;
    padding-block: .2rem;
    box-sizing: border-box;
}

table th {
    display: table-cell;
    vertical-align: middle;
    font-weight: bold;
    padding-inline: 1rem;
    padding-block: .2rem;
    box-sizing: border-box;
}

table tr {
    display: table-row;
    vertical-align: inherit;
}

tbody tr:nth-of-type(odd) { // odd ganjil
    background-color: var(--bg-blockquote);
}

tbody tr:nth-of-type(even) { // even genap
    background-color: var(--color-box);
}
// END Table

